# sleep-analysis

./: .readthedocs.yml  README.md  pyproject.toml
Notebook/: sklearn_scratch.ipynb  sleep_data_Analysis.ipynb
docs/: conf.py  datasets.md  index.rst  roadmap.md  todo.md
docs/api/: index.md
docs/api/models/: index.md
docs/io/: eeglab.md  index.md
sleep_analysis/io/: eeglab.py  io.py
sleep_analysis/model/: __init__.py  eeg.py  model.py  sleep.py
