[tool.poetry]
name = "sleep-analysis"
version = "0.1.0"
description = "Some code to analyze sleep data!"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "sleep_analysis"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.2"
mne = {extras = ["hdf5"], version = "^1.4.0"}
pandas = "^2.0.1"
jupyter = "^1.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.2.1"
furo = "^2023.5.20"
myst-parser = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
